--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "browserify": "^16.5.0",
     "ip-address": "^6.1.0",
+    "nodemon": "^2.0.1",
     "tinyify": "^2.5.2"
   }
 }
